--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
-APP_URL=http://inedu.loc
+APP_URL=http://inedu.loc/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
