--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+        "maddhatter/laravel-fullcalendar": "^1.2",
+        "google/apiclient": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
