--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 APP_ENV=server
-APP_DEBUG=false
+APP_DEBUG=true
 APP_KEY=base64:/0OKRoXVIPGeOyKEkMRR4bpt3k/ieOX3q6znnun11R0=
 APP_URL=http://inedu.loc
 
 DB_CONNECTION=mysql
-DB_HOST=
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=inedu2
+DB_DATABASE=inedu
 DB_USERNAME=root
 DB_PASSWORD=
 
