--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,15 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "cmgmyr/messenger": "~2.0"
+        "cmgmyr/messenger": "~2.0",
+        "maddhatter/laravel-fullcalendar": "^1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
-        "hamedmehryar/laravel-chat": "0.0.0"
+        "symfony/dom-crawler": "2.8.*|3.0.*"
     },
     "autoload": {
         "classmap": [
